伊沢ついでにガイジ追加

--- a/test_janken.html
+++ b/test_janken.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <div class="container">【相手の手_伊沢障害】</div>
+    <div class="container">【相手の手_伊沢障害_ついでにガイジ】</div>
     <div id="opponent_hand" class="janken_button_display"></div>
 
     <div class="container">【結果】</div>
